Done resolving errors on the mplementation of  all Momo Splitwise core features

--- a/momo_splitwise/tsconfig.json
+++ b/momo_splitwise/tsconfig.json
@@ -17,6 +17,5 @@
     "noFallthroughCasesInSwitch": true,
     "verbatimModuleSyntax": false
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src"]
 }
