--- a/momo_splitwise/package.json
+++ b/momo_splitwise/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
+    "date-fns": "^4.1.0",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.548.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
     "recharts": "^3.3.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
