--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,10 +3,9 @@ PORT=5000
 NODE_ENV=development
 
 # Database Configuration
-# MongoDB Atlas URI (recommended for production)
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/momo_splitwise?retryWrites=true&w=majority
-# Local MongoDB URL (for development)
-MONGODB_URL=mongodb://localhost:27017/momo_splitwise
+
+# Local MongoDB URL (for Docker / local development)
+MONGODB_URL=mongodb://mongo:27017/momo_splitwise
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-in-production-make-it-long-and-random
