--- a/package.json
+++ b/package.json
@@ -1,9 +1,1 @@
-{
-  "devDependencies": {
-    "@vitejs/plugin-react": "^5.1.0",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.16",
-    "vite": "^7.1.12"
-  }
-}
+{"scripts":{"lint":"eslint . --ext .ts,.tsx,.js,.jsx --fix"},"devDependencies":{"@eslint/js":"^9.39.0","@typescript-eslint/eslint-plugin":"^8.46.2","@typescript-eslint/parser":"^8.46.2","@vitejs/plugin-react":"^5.1.0","autoprefixer":"^10.4.21","eslint":"^9.39.0","eslint-plugin-react":"^7.37.5","eslint-plugin-react-hooks":"^7.0.1","eslint-plugin-react-refresh":"^0.4.24","globals":"^16.5.0","postcss":"^8.5.6","tailwindcss":"^4.1.16","typescript-eslint":"^8.46.2","vite":"^7.1.12"}}
