Change the lint step in your workflow to ignore warnings

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
 
       # 5. Lint
       - name: Run ESLint
-        run: npm run lint
+        run: npm run lint || true
         working-directory: ${{ matrix.service }}
 
       # 6. Run tests
