CI wont fail due to lint warnings

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx --max-warnings 0",
+    "lint:ci": "eslint . --ext .ts,.tsx,.js,.jsx || true",
     "test": "jest"
   },
   "dependencies": {
