--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext .ts,.tsx,.js,.jsx --fix",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives",
     "lint:ci": "eslint . --ext .ts,.tsx,.js,.jsx || true",
     "preview": "vite preview"
   },
