--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
     "@types/nodemailer": "^7.0.3",
@@ -24,6 +25,8 @@
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
+    "eslint": "^9.6.0",
+    "globals": "^16.5.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "supertest": "^6.3.3"
