--- a/.github/workflows/sec-ci.yml
+++ b/.github/workflows/sec-ci.yml
@@ -16,6 +16,7 @@ jobs:
     name: trivy-scan
     runs-on: ubuntu-latest
     timeout-minutes: 30
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -28,14 +29,22 @@ jobs:
       - name: Build Docker image
         run: docker build -t "${{ env.IMAGE_TAG }}" .
 
-      - name: Login to Azure (if AZURE_CREDENTIALS present)
-        if: ${{ secrets.AZURE_CREDENTIALS }}
+      # --------------------------------------
+      # Fix: wrap secrets in env for condition
+      # --------------------------------------
+      - name: Export secrets for conditions
+        run: |
+          echo "HAS_AZ_CREDS=${{ secrets.AZURE_CREDENTIALS }}" >> $GITHUB_ENV
+          echo "HAS_REGISTRY=${{ secrets.REGISTRY }}" >> $GITHUB_ENV
+
+      - name: Login to Azure (only if secret provided)
+        if: env.HAS_AZ_CREDS != ''
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: (Optional) ACR login using az if registry secret present
-        if: ${{ secrets.REGISTRY && secrets.AZURE_CREDENTIALS }}
+      - name: (Optional) ACR login (only if both secrets exist)
+        if: env.HAS_AZ_CREDS != '' && env.HAS_REGISTRY != ''
         run: |
           az acr login --name $(echo "${{ secrets.REGISTRY }}" | cut -d'.' -f1)
 
@@ -60,6 +69,7 @@ jobs:
     name: tfsec-scan
     runs-on: ubuntu-latest
     timeout-minutes: 20
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
