first version reverted

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,5 +1,6 @@
 name: Deploy to Production
 
+# trigger only on merges (pushes) to main
 on:
   push:
     branches: [ main ]
@@ -8,105 +9,94 @@ permissions:
   contents: read
   id-token: write
 
+env:
+  IMAGE_NAME: ${{ github.repository_owner }}/${{ github.repository }}
+  REGISTRY: ${{ secrets.REGISTRY }}           # example: momosplitwiseprodacr.azurecr.io
+  IMAGE_TAG: ${{ github.sha }}
+
 jobs:
   deploy:
     name: Deploy (build → push → ansible)
     runs-on: ubuntu-latest
     timeout-minutes: 45
 
-    env:
-      REGISTRY: ${{ secrets.REGISTRY }}
-      IMAGE_TAG: ${{ github.sha }}
-
     steps:
-      # ------------------------------
-      # 1 — Checkout code
-      # ------------------------------
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      # ------------------------------
-      # 2 — Set IMAGE_NAME lowercase
-      # ------------------------------
-      - name: Set IMAGE_NAME lowercase
-        run: |
-          IMAGE_NAME_LOWER=$(echo "${GITHUB_REPOSITORY}" | tr '[:upper:]' '[:lower:]')
-          echo "IMAGE_NAME=${IMAGE_NAME_LOWER}" >> $GITHUB_ENV
-        shell: bash
-
-      # ------------------------------
-      # 3 — CI Checks (linter / tests / tfsec)
-      # ------------------------------
+      # --- 1: Run CI checks (replace these with your actual commands) ---
       - name: Run linter
         run: |
-          echo ">>> running linter (replace this with actual command)"
+          echo ">>> running linter (replace this with real command)"
+          # e.g. flake8 ., npm run lint, etc.
           true
 
       - name: Run tests
         run: |
-          echo ">>> running tests (replace with actual command)"
+          echo ">>> running tests (replace this with real command)"
+          # e.g. pytest -q, npm test, etc.
           true
 
-      - name: Run Trivy scan (placeholder)
+      - name: Run Trivy scan (image-less quick scan placeholder)
         run: |
-          echo ">>> skipping Trivy scan here (image scanned after build)"
+          echo ">>> skipping Trivy here (image scanned after build)."
 
       - name: Run tfsec (IaC scan)
         run: |
-          echo ">>> running tfsec on ./terraform"
+          echo ">>> Running tfsec (terraform/)"
+          # if you need tfsec action, use the action version; here is a quick run:
           docker run --rm -v "${{ github.workspace }}/terraform":/src aquasec/tfsec /src || true
 
-      # ------------------------------
-      # 4 — Build & Push Docker Image
-      # ------------------------------
-      - name: Set up QEMU
+      # --- 2: Build image and push to ACR ---
+      - name: Set up QEMU (optional)
         uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to Azure using Service Principal
+      - name: Login to Azure using service principal (for az acr push)
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Login to ACR
+      - name: Login to ACR (az acr login)
         run: |
           echo "Logging into ACR: $REGISTRY"
+          echo $REGISTRY
           az acr login --name $(echo "$REGISTRY" | cut -d'.' -f1)
 
-      - name: Build Docker image
+      - name: Build Docker image (tag with SHA)
         run: |
-          FULL_IMAGE="${REGISTRY}/${IMAGE_NAME}:${IMAGE_TAG}"
-          echo "Building image: ${FULL_IMAGE}"
+          FULL_IMAGE="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}"
+          echo "Building ${FULL_IMAGE}"
           docker build -t "${FULL_IMAGE}" .
           docker images --format "{{.Repository}}:{{.Tag}} {{.ID}}"
 
-      - name: Push Docker image
+      - name: Push image to ACR
         run: |
-          FULL_IMAGE="${REGISTRY}/${IMAGE_NAME}:${IMAGE_TAG}"
+          FULL_IMAGE="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}"
           echo "Pushing ${FULL_IMAGE}"
           docker push "${FULL_IMAGE}"
 
-      - name: Tag and push :latest
+      # Optional: create/update 'latest' tag (if you want)
+      - name: Tag image as latest (optional)
         run: |
-          FULL_IMAGE="${REGISTRY}/${IMAGE_NAME}:${IMAGE_TAG}"
-          LATEST="${REGISTRY}/${IMAGE_NAME}:latest"
+          FULL_IMAGE="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}"
+          LATEST="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest"
           docker tag "${FULL_IMAGE}" "${LATEST}"
           docker push "${LATEST}"
 
-      # ------------------------------
-      # 5 — Deploy with Ansible
-      # ------------------------------
-      - name: Prepare SSH key
+      # --- 3: Deploy via Ansible ---
+      - name: Prepare SSH key for Ansible
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/deploy_key
           chmod 600 ~/.ssh/deploy_key
+        shell: bash
 
-      - name: Install Ansible
+      - name: Install Ansible & dependencies
         run: |
           sudo apt-get update -y
           sudo apt-get install -y python3-pip sshpass
@@ -114,28 +104,27 @@ jobs:
           export PATH=$PATH:~/.local/bin
           ansible --version
 
-      - name: Run Ansible Playbook
+      - name: Run Ansible playbook to deploy
         env:
           IMAGE_TAG: ${{ env.IMAGE_TAG }}
           REGISTRY: ${{ env.REGISTRY }}
           ACR_USERNAME: ${{ secrets.ACR_USERNAME }}
           ACR_PASSWORD: ${{ secrets.ACR_PASSWORD }}
         run: |
+          # ensure ansible is on PATH
           export PATH=$PATH:~/.local/bin
-          ansible-playbook \
-            -i ansible/inventory.ini \
-            ansible/deploy.yml \
-            --private-key ~/.ssh/deploy_key \
-            -u ubuntu \
+
+          # Run ansible-playbook using the repo inventory and the private key
+          # Pass image tag + registry + ACR credentials as extra-vars
+          ansible-playbook -i ansible/inventory.ini ansible/deploy.yml \
+            --private-key ~/.ssh/deploy_key -u ubuntu \
             -e "image_tag=${IMAGE_TAG}" \
             -e "registry=${REGISTRY}" \
             -e "acr_username=${ACR_USERNAME}" \
             -e "acr_password=${ACR_PASSWORD}"
 
-      # ------------------------------
-      # 6 — GitHub Deployment Status
-      # ------------------------------
-      - name: Deployment Summary (success)
+      # --- 4: (Optional) Notify by creating a check summary (simple) ---
+      - name: Create deploy summary (success)
         if: ${{ success() }}
         uses: actions/github-script@v6
         with:
@@ -147,10 +136,10 @@ jobs:
               sha: context.sha,
               state: "success",
               context: "cd/deploy",
-              description: `Deployed image ${process.env.REGISTRY}/${process.env.IMAGE_NAME}:${process.env.IMAGE_TAG}`
+              description: "Deployed to production: image ${process.env.REGISTRY}/${process.env.IMAGE_NAME}:${process.env.IMAGE_TAG}"
             })
 
-      - name: Deployment Summary (failure)
+      - name: Create deploy summary (failure)
         if: ${{ failure() }}
         uses: actions/github-script@v6
         with:
