--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,9 +1,11 @@
 name: Deploy to Production
 
-# trigger only on merges
+# Trigger CD only after CI and Sec-CI workflows complete successfully
 on:
-  push:
-    branches: [ main ]
+  workflow_run:
+    workflows: ["CI", "Sec-CI"]   # exact names of your workflows
+    types:
+      - completed
 
 permissions:
   contents: read
@@ -11,91 +13,72 @@ permissions:
 
 env:
   IMAGE_NAME: ${{ github.repository_owner }}/${{ github.repository }}
-  REGISTRY: ${{ secrets.REGISTRY }}           # example: momosplitwiseprodacr.azurecr.io
+  REGISTRY: ${{ secrets.REGISTRY }}           # e.g., momosplitwiseprodacr.azurecr.io
   IMAGE_TAG: ${{ github.sha }}
 
 jobs:
   deploy:
     name: Deploy (build → push → ansible)
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     timeout-minutes: 45
 
     steps:
+      # 1️⃣ Checkout code
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      # --- 1: Run CI checks (replace these with your actual commands) ---
-      - name: Run linter
-        run: |
-          echo ">>> running linter (replace this with real command)"
-          # e.g. flake8 ., npm run lint, etc.
-          true
-
-      - name: Run tests
-        run: |
-          echo ">>> running tests (replace this with real command)"
-          # e.g. pytest -q, npm test, etc.
-          true
-
-      - name: Run Trivy scan (image-less quick scan placeholder)
-        run: |
-          echo ">>> skipping Trivy here (image scanned after build)."
-
-      - name: Run tfsec (IaC scan)
-        run: |
-          echo ">>> Running tfsec (terraform/)"
-          # if you need tfsec action, use the action version; here is a quick run:
-          docker run --rm -v "${{ github.workspace }}/terraform":/src aquasec/tfsec /src || true
-
-      # --- 2: Build image and push to ACR ---
-      - name: Set up QEMU (optional)
+      # 2️⃣ Set up Docker build environment
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Login to Azure using service principal (for az acr push)
+      # 3️⃣ Login to Azure (for ACR)
+      - name: Login to Azure
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Login to ACR (az acr login)
+      - name: Login to ACR
         run: |
           echo "Logging into ACR: $REGISTRY"
-          echo $REGISTRY
           az acr login --name $(echo "$REGISTRY" | cut -d'.' -f1)
 
-      - name: Build Docker image (tag with SHA)
+      # 4️⃣ Build Docker image
+      - name: Build Docker image
         run: |
           FULL_IMAGE="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}"
           echo "Building ${FULL_IMAGE}"
           docker build -t "${FULL_IMAGE}" .
           docker images --format "{{.Repository}}:{{.Tag}} {{.ID}}"
 
-      - name: Push image to ACR
+      # 5️⃣ Push Docker image
+      - name: Push Docker image
         run: |
           FULL_IMAGE="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}"
           echo "Pushing ${FULL_IMAGE}"
           docker push "${FULL_IMAGE}"
 
-      # Optional: create/update 'latest' tag (if you want)
-      - name: Tag image as latest (optional)
+      # 6️⃣ Tag as latest (optional)
+      - name: Tag image as latest
         run: |
           FULL_IMAGE="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}"
           LATEST="${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest"
           docker tag "${FULL_IMAGE}" "${LATEST}"
           docker push "${LATEST}"
 
-      # --- 3: Deploy via Ansible ---
-      - name: Prepare SSH key for Ansible
+      # 7️⃣ Prepare SSH key for Ansible
+      - name: Prepare SSH key
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/deploy_key
           chmod 600 ~/.ssh/deploy_key
-        shell: bash
 
+      # 8️⃣ Install Ansible
       - name: Install Ansible & dependencies
         run: |
           sudo apt-get update -y
@@ -104,18 +87,15 @@ jobs:
           export PATH=$PATH:~/.local/bin
           ansible --version
 
-      - name: Run Ansible playbook to deploy
+      # 9️⃣ Run Ansible playbook to deploy
+      - name: Run Ansible playbook
         env:
           IMAGE_TAG: ${{ env.IMAGE_TAG }}
           REGISTRY: ${{ env.REGISTRY }}
           ACR_USERNAME: ${{ secrets.ACR_USERNAME }}
           ACR_PASSWORD: ${{ secrets.ACR_PASSWORD }}
         run: |
-          # ensure ansible is on PATH
           export PATH=$PATH:~/.local/bin
-
-          # Run ansible-playbook using the repo inventory and the private key
-          # Pass image tag + registry + ACR credentials as extra-vars
           ansible-playbook -i ansible/inventory.ini ansible/deploy.yml \
             --private-key ~/.ssh/deploy_key -u ubuntu \
             -e "image_tag=${IMAGE_TAG}" \
@@ -123,7 +103,7 @@ jobs:
             -e "acr_username=${ACR_USERNAME}" \
             -e "acr_password=${ACR_PASSWORD}"
 
-      # --- 4: (Optional) Notify by creating a check summary (simple) ---
+      # 10️⃣ Create deploy summary (success/failure)
       - name: Create deploy summary (success)
         if: ${{ success() }}
         uses: actions/github-script@v6
