--- a/.github/workflows/sec-ci.yml
+++ b/.github/workflows/sec-ci.yml
@@ -10,15 +10,12 @@ permissions:
 
 env:
   IMAGE_TAG: ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:pr-${{ github.event.pull_request.number }}
-  AZURE_CREDS: ${{ secrets.AZURE_CREDENTIALS }}
-  REGISTRY: ${{ secrets.REGISTRY }}
 
 jobs:
   trivy-scan:
-    name: Trivy Scan
+    name: trivy-scan
     runs-on: ubuntu-latest
     timeout-minutes: 30
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -31,25 +28,25 @@ jobs:
       - name: Build Docker image
         run: docker build -t "${{ env.IMAGE_TAG }}" .
 
-      - name: Login to Azure (optional)
-        if: env.AZURE_CREDS != ''
+      - name: Login to Azure (if AZURE_CREDENTIALS present)
+        if: ${{ secrets.AZURE_CREDENTIALS != null }}
         uses: azure/login@v1
         with:
-          creds: ${{ env.AZURE_CREDS }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: (Optional) ACR login
-        if: env.AZURE_CREDS != '' && env.REGISTRY != ''
+      - name: (Optional) ACR login using az if registry secret present
+        if: ${{ secrets.REGISTRY != null && secrets.AZURE_CREDENTIALS != null }}
         run: |
-          az acr login --name $(echo "${{ env.REGISTRY }}" | cut -d'.' -f1)
+          az acr login --name $(echo "${{ secrets.REGISTRY }}" | cut -d'.' -f1)
 
       - name: Run Trivy vulnerability scanner (SARIF output)
-        uses: aquasecurity/trivy-action@v1
+        uses: aquasecurity/trivy-action@master
         with:
           image-ref: '${{ env.IMAGE_TAG }}'
           format: 'sarif'
           output: 'trivy-report.sarif'
           severity: 'CRITICAL,HIGH'
-          exit-code: '0'
+          exit-code: '1'
           vuln-type: 'os,library'
           ignore-unfixed: 'false'
 
@@ -60,10 +57,9 @@ jobs:
           sarif_file: trivy-report.sarif
 
   tfsec-scan:
-    name: tfsec Scan
+    name: tfsec-scan
     runs-on: ubuntu-latest
     timeout-minutes: 20
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -74,4 +70,4 @@ jobs:
         uses: aquasecurity/tfsec-action@v1.0.0
         with:
           working_directory: 'terraform/'
-          soft_fail: true
+          soft_fail: false
