--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -55,6 +55,7 @@ jobs:
           context: .
           push: false
           tags: momo-splitwise-backend:latest
+          load: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -66,6 +67,7 @@ jobs:
           exit-code: "1"
           ignore-unfixed: true
           severity: "CRITICAL"
+          scan-type: "image"
 
       # IaC scanning with tfsec
       - name: Install tfsec
