--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,7 @@ jobs:
           context: .
           push: false
           tags: momo-splitwise-backend:latest
+          load: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
