--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -70,13 +70,11 @@ jobs:
           scan-type: "image"
 
       # IaC scanning with tfsec
-      - name: Install tfsec
-        uses: aquasecurity/tfsec-action@v1.0.0
-
       - name: Run tfsec
-        run: |
-          cd terraform
-          tfsec --no-color --soft-fail
+        uses: aquasecurity/tfsec-action@v1.0.0
+        with:
+          working_directory: terraform
+          soft_fail: true
 
   # Build and push to Azure Container Registry
   build-and-push:
