--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -180,6 +180,10 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y ansible
 
+      - name: Install Ansible Docker collection
+        run: |
+          ansible-galaxy collection install community.docker
+
       - name: Create Ansible inventory
         run: |
           mkdir -p ansible/inventory
