--- a/ansible/playbooks/deploy.yml
+++ b/ansible/playbooks/deploy.yml
@@ -37,10 +37,9 @@
     - name: Ensure ACR authentication before pulling images
       shell: |
         az login --identity --allow-no-subscriptions || true
-        az acr login --name {{ acr_name | default('momosplitwiseprodacrzfbsm6') }}
+        az acr login --name {{ acr_name }}
       failed_when: false
       changed_when: false
-      when: acr_name is defined or true
 
     - name: Copy Docker Compose file
       template:
