feat: enable CD pipeline on Terraform branch for testing before merge

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,7 +3,7 @@ name: Continuous Deployment (CD)
 
 on:
   push:
-    branches: [main]
+    branches: [main, Terraform]  # Allow CD on both main and Terraform branches
   workflow_dispatch:  # Allow manual trigger
 
 jobs:
